Text re-worded re-sized

--- a/mobileApp/app/src/main/res/values/strings.xml
+++ b/mobileApp/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">ForMe</string>
+    <string name="loading">Loading...</string>
+    <string name="MoreInfo"><u>Learn More</u></string>
+    <string name="branch">Branch Near You</string>
+    <string name="Apply">Apply Now!</string>
 </resources>
