Rounded Button Corners, Text size readjustment

--- a/mobileApp/app/src/main/res/values/strings.xml
+++ b/mobileApp/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="MoreInfo"><u>Learn More</u></string>
     <string name="branch">Branch Near You</string>
     <string name="Apply">Apply Now!</string>
+    <string name="forgot">Forgot Password?</string>
 </resources>
