--- a/mobileApp/app/src/main/res/values/strings.xml
+++ b/mobileApp/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="branch">Branch Near You</string>
     <string name="Apply">Apply Now!</string>
     <string name="forgot"><u>Forgot Password?</u></string>
+    <string name="title_activity_maps">Map</string>
 </resources>
